Fix layout issues.

--- a/src/components/shared/articles/styles/ArticleSideContent.sass
+++ b/src/components/shared/articles/styles/ArticleSideContent.sass
@@ -1,4 +1,5 @@
 .article-side-content
+  max-width: 300px;
 
   .trending
     display: flex;
